day-5 files added

--- a/wefit/package.json
+++ b/wefit/package.json
@@ -21,8 +21,10 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
   },
